--- a/clientJs/package.json
+++ b/clientJs/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@fontsource/inter": "^5.1.0",
     "@fontsource/roboto": "^5.1.0",
+    "@mui/base": "^5.0.0-beta.62",
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
     "bootstrap": "^5.3.3",
